plugins {
    id 'groovy'
    id 'java'
    id 'pl.allegro.tech.build.axion-release' version '1.21.2'
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
    id 'maven-publish'
}

group 'org.rundeck.plugins'

scmVersion {
    ignoreUncommittedChanges = false
    tag {
        prefix = ''           // NO "v" prefix - see PLUGIN_TAGGING_ARCHITECTURE.md
        versionSeparator = ''
    }
    versionCreator 'simple'  // Use simple version creator (just tag name)
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

ext.publishName = "Multiline Regex Datacapture Filter ${project.version}"
ext.publishDescription = project.description ?: 'Multiline Regex Datacapture Filter Plugin'
ext.githubSlug = 'rundeck-plugins/multiline-regex-datacapture-filter-plugin'
ext.developers = [
        [id: 'gschueler', name: 'Greg Schueler', email: 'greg@rundeck.com']
]

ext.rundeckVersion='6.1.0-SNAPSHOT'
defaultTasks 'clean','build'
ext.rundeckPluginVersion= '1.2'

version = scmVersion.version  // Dynamic version from git tag

/**
 * Set this to a comma-separated list of full classnames of your implemented Rundeck
 * plugins.
 */
ext.pluginClassNames='com.rundeck.plugin.DataKeyFilterMultiLines'




repositories {
    mavenLocal()
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
        content {
            includeGroup('org.rundeck')
        }
    }
    mavenCentral()
}

configurations{
    //declare custom pluginLibs configuration to include only libs for this plugin
    pluginLibs

    //declare implementation to extend from pluginLibs so it inherits the dependencies
    implementation{
        extendsFrom pluginLibs
    }
}


dependencies {
    implementation 'org.apache.groovy:groovy-all:4.0.32'
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'

    compileOnly(group: 'org.rundeck', name: 'rundeck-core', version: rundeckVersion) {
        // Exclude vulnerable commons-lang 2.6 - not needed by this plugin
        exclude group: 'commons-lang', module: 'commons-lang'
    }
    testImplementation(group: 'org.rundeck', name: 'rundeck-core', version: rundeckVersion) {
        exclude group: 'commons-lang', module: 'commons-lang'
    }
    testImplementation "org.spockframework:spock-core:2.4-groovy-4.0"

}



// task to copy plugin libs to output/lib dir
task copyToLib(type: Copy) {
    into "$buildDir/output/lib"
    from configurations.pluginLibs
}


jar {
    from "$buildDir/output"
    manifest {
        def libList = configurations.pluginLibs.collect{'lib/'+it.name}.join(' ')
        attributes 'Rundeck-Plugin-Classnames': pluginClassNames
        attributes 'Rundeck-Plugin-File-Version': version
        attributes 'Rundeck-Plugin-Version': rundeckPluginVersion, 'Rundeck-Plugin-Archive': 'true'
        attributes 'Rundeck-Plugin-Libs': "${libList}"
        attributes 'Class-Path': "${libList} lib/rundeck-core-${rundeckVersion}.jar"
    }
}
//set jar task to depend on copyToLib
jar.dependsOn(copyToLib)

test {
    useJUnitPlatform()
    
    // Java 17+ module access for cglib/Spock mocking
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
    ]
}

nexusPublishing {
    packageGroup = 'org.rundeck.plugins'
    repositories {
        sonatype {
            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
        }
    }
}

apply from: "${rootDir}/gradle/publishing.gradle"
